<resources>
    <string name="app_name">Demo</string>

    <string name="press_again_to_exit">再按一次退出</string>

    <string name="login">登录</string>
    <string name="session">会话</string>
    <string name="contact">通讯录</string>
    <string name="me">我的</string>
    <string name="register">注册</string>
    <string name="logout">退出</string>
    <string name="message">消息</string>

    <string name="register_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="register_nickname_tip">昵称限10位汉字、字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>


    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="record_audio">按住 说话</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>

    <string name="reload">重新加载</string>

    <string name="input_panel_call">呼 叫</string>
    <string name="input_panel_album">相 册</string>
    <string name="input_panel_video">拍 摄</string>
    <string name="input_panel_file">文 件</string>
    <string name="input_panel_local">位 置</string>

    <string name="call_voice">语音通话</string>
    <string name="call_video">视频通话</string>


    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>

    <string name="recording_cancel">手指上滑　取消发送</string>
    <string name="recording_cancel_tip">松开手指　取消发送</string>

    <string name="recording_error">说话时间太短</string>
    <string name="recording_max">说话时间超时</string>

    <string name="location_open_map_error">打开地图出错</string>

    <string name="on_sticky_top">置顶</string>
    <string name="clear_sticky_top">取消置顶</string>
    <string name="clear_disturb">取消免打扰</string>
    <string name="on_disturb">免打扰</string>
    <string name="remove">移除</string>
    <string name="camera_tips">轻触拍照 长按摄像</string>
    <string name="file">文件</string>
    <string name="see">查看</string>
    <string name="empty">空空如也</string>

    <string name="cat_choose_theme_label">Choose theme</string>
    <string name="cat_choose_theme_light">Light</string>
    <string name="cat_choose_theme_dark">Dark</string>
    <string name="cat_choose_theme_default">System default</string>

    <string name="file_option_my">我的文件</string>
    <string name="file_option_weixin">微信文件</string>
    <string name="file_option_phone">手机存储</string>
    <string name="setting">设置</string>
    <string name="profile">个人信息</string>
    <string name="avatar">头像</string>

    <string name="nickname">昵 称</string>
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="gender">性 别</string>
    <string name="signature">签 名</string>

    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="contact_info">联系人资料</string>
    <string name="logout_info">确定要退出吗？</string>
    <string name="kickout_info">您的账号在另一个设备登录，您被迫下线。如果这不是您本人的操作，您的密码很可能已经泄露，建议您修改密码。</string>
    <string name="confirm">确认</string>

    <string name="net_broken">当前网络不可用,请检查你的网络设置</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中…</string>
    <string name="nim_status_logining">登录中…</string>

    <!-- 多端登录 -->
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>

    <string name="alias">备注名</string>
    <string name="no_setting">未设置</string>

    <string name="black_list">黑名单</string>
    <string name="message_sticky">消息置顶</string>
    <string name="message_notice">消息提醒</string>

    <string name="chat">聊天</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_friend">添加好友</string>
    <string name="delete_friend_info">删除好友后，将同时解除双方的好友关系，确定要删除该好友吗?</string>

    <string name="alias_info">请输入备注名</string>
    <string name="input_name_info">请输入昵称</string>
    <string name="input_mobile_info">请输入手机</string>
    <string name="input_emial_info">请输入邮箱</string>
    <string name="input_mobile_tip">请输入正确的手机号</string>
    <string name="input_emial_tip">请输入正确邮箱</string>
    <string name="input_signature_info">请输入签名</string>

    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>

    <string name="avchat_audio_call_request">请求语音聊天…</string>
    <string name="avchat_wait_recieve">等待对方接听…</string>
    <string name="avchat_video_call_request">请求视频聊天…</string>

    <string name="avchat_connecting">通话中…</string>

    <string name="nrtc_setting_other_device_default_rotation_key">nrtc_setting_other_device_default_rotation_key</string>
    <string name="nrtc_setting_other_device_default_rotation">设备默认旋转角度(特殊设备使用)</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset_key">nrtc_setting_other_device_rotation_fixed_offset_key</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset">设备旋转角度修正偏移量(特殊设备使用)</string>
    <string name="nrtc_setting_vie_rotation_key">nrtc_setting_vie_rotation_key</string>
    <string name="nrtc_setting_vie_rotation">画面旋转</string>
    <string name="nrtc_setting_vie_default_front_camera_key">nrtc_setting_vie_default_front_camera_key</string>
    <string name="nrtc_setting_vie_default_front_camera">默认前置摄像头</string>
    <string name="nrtc_setting_vie_hw_encoder_key">nrtc_setting_vie_hw_encoder_key</string>
    <string name="nrtc_setting_vie_hw_encoder">硬件编码(仅部分设备支持)</string>
    <string name="nrtc_setting_vie_hw_decoder_key">nrtc_setting_vie_hw_decoder_key</string>
    <string name="nrtc_setting_vie_hw_decoder">硬件解码(仅部分设备支持)</string>
    <string name="nrtc_setting_other_server_record_audio_key">nrtc_setting_other_server_record_audio_key</string>
    <string name="nrtc_setting_other_server_record_audio">音频服务器录制</string>
    <string name="nrtc_setting_other_server_record_video_key">nrtc_setting_other_server_record_video_key</string>
    <string name="nrtc_setting_other_server_record_video">视频服务器录制</string>
    <string name="nrtc_setting_voe_call_proximity_key">nrtc_setting_voe_call_proximity_key</string>
    <string name="nrtc_setting_voe_call_proximity">通话期间关闭屏幕</string>
    <string name="nrtc_setting_vie_fps_reported_key">nrtc_setting_vie_fps_reported_key</string>
    <string name="nrtc_setting_vie_fps_reported">帧率汇报</string>
    <string name="nrtc_setting_vie_max_bitrate_key">nrtc_setting_vie_max_bitrate_key</string>
    <string name="nrtc_setting_vie_max_bitrate">码率(Kbps)</string>
    <string name="nrtc_setting_voe_audio_aec_key">nrtc_setting_voe_audio_aec_key</string>
    <string name="nrtc_setting_voe_audio_aec">回音消除</string>
    <string name="nrtc_setting_voe_audio_ns_key">nrtc_setting_voe_audio_ns_key</string>
    <string name="nrtc_setting_voe_audio_ns">降噪</string>
    <string name="nrtc_setting_voe_high_quality_key">nrtc_setting_voe_high_quality_key</string>
    <string name="nrtc_setting_voe_high_quality">高清语音</string>
    <string name="nrtc_setting_vie_crop_ratio_key">nrtc_setting_vie_crop_ratio_key</string>
    <string name="nrtc_setting_vie_crop_ratio">画面裁剪比例</string>
    <string name="nrtc_setting_vie_quality_key">nrtc_setting_vie_quality_key</string>
    <string name="nrtc_setting_vie_quality">视频清晰度</string>


</resources>
