<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="com.netease.nim.demo.ui.user.viewmodel.ItemViewModelUserBottom" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/chat"
            style="@style/Widget.MyTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:minHeight="50dp"
            android:text="@string/chat"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onClickCommand="@{item.onClickChatCommand}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:minHeight="50dp"
            android:text="@string/delete_friend"
            app:layout_constraintBottom_toTopOf="@+id/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:isShown="@{item.delete}"
            app:layout_constraintTop_toBottomOf="@+id/chat"
            app:onClickCommand="@{item.onClickDeleteCommand}" />

        <Button
            android:id="@+id/add"
            style="@style/Widget.MyTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:minHeight="50dp"
            android:text="@string/add_friend"
            app:isShown="@{item.add}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete"
            app:onClickCommand="@{item.onClickAddCommand}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>